# graphitude

./: .gitignore  CONTRIBUTING.md  Cargo.toml  DOT_ATTRS_REFACTORING.md  README.md  TODO  TODO.md
as_enum/: Cargo.toml
as_enum/src/: lib.rs
as_enum/tests/: integration.rs
as_enum_derive/: Cargo.toml  PROMPT.md  directedness2.rs
as_enum_derive/src/: lib.rs
examples/: dot_attrs_example.rs  dot_summary.rs  large_graph_to_dot.rs
graphitude/: Cargo.toml
graphitude/examples/: dot_attrs_example.rs  dot_summary.rs  large_graph_to_dot.rs
graphitude/src/: coordinate_pair.rs  copier.rs  directedness.rs  edge_multiplicity.rs  end_pair.rs  format_debug.rs  generate_large_graph.rs  graph.rs  graph_test_support.rs  graph_tests.rs  graph_traits.rs  invalid_id.rs  lib.rs  object_graph.rs  path.rs  prelude.rs  search.rs  test_util.rs  tracing_support.rs  util.rs
graphitude/tests/: dot_roundtrip.rs  fancy_string_graph.rs  graph_impls.rs
src/: adjacency_graph.rs  adjacency_matrix.rs  bag.rs  coordinate_pair.rs  copier.rs  debug.rs  debug_graph_view.rs  directedness.rs  dot_parser_impl.rs  edge_ends.rs  edge_multiplicity.rs  edge_ref.rs  end_pair.rs  euler_sum.rs  format_debug.rs  generate_large_graph.rs  graph.rs  graph_id.rs  graph_impl.rs  graph_test_support.rs  graph_tests.rs  graph_traits.rs  id.rs  id_vec.rs  kind.rs  lib.rs  linked_graph.rs  map_collector.rs  mapping_result.rs  object_graph.rs  pairs.rs  path.rs  prelude.rs  search.rs  symmetric_maxtrix_indexing.rs  test_util.rs  tests.rs  tracing_support.rs  triangular.rs  util.rs  (+1 more)
src/adjacency_graph/: edge_container.rs  graph_impl.rs  ids.rs  mod.rs
src/adjacency_matrix/: hash.rs  mod.rs  storage.rs  symmetry.rs  tests.rs  trait_def.rs
src/automap/: indexed.rs  mod.rs  offset.rs  trait_def.rs
src/bag_graph/: edge_id.rs  ids.rs  mod.rs  node_id.rs
src/dot/: attr.rs  generate.rs  mod.rs  parser.rs  parser_impl.rs  renderer.rs  types.rs
src/graph/: dot_attrs.rs  dot_types.rs  mod.rs
src/id_vec/: indexed.rs  mod.rs  offset.rs  trait_def.rs
test_suite_macro/: .gitignore  Cargo.toml  README.md
tests/: basic_string_graph.rs  common.rs  debug_test.rs  dot_roundtrip.rs  fancy_string_graph.rs  graph_impls.rs  integration.rs  object_graph.rs  owned_object_graph.rs  ref_object_graph.rs  string_graph.rs
(+53 files in other folders)
