[package]
name = "graphitude"
version = "0.1.0"
edition = "2024"

[dependencies]
derivative = "2.2"
thiserror = "2.0.18"
pathfinding = { version = "4.14.0", optional = true }
bitvec = { version = "1.0.1", optional = true }
dot-parser = { version = "0.6.1", optional = true }

[dev-dependencies]
clap = { version = "4.5", features = [
  "derive",
] }

[features]
default = [
  "pathfinding",
  "bitvec",
  "dot",
]
dot = [
  "dep:dot-parser",
]
pathfinding = [
  "dep:pathfinding",
]
bitvec = [
  "dep:bitvec",
]
unchecked = [
]
