[package]
name = "graphitude"
version = "0.1.0"
edition = "2024"

[dependencies]
derivative = "2.2"
thiserror = "2.0.18"
pathfinding = { version = "4.14.0", optional = true }
bitvec = { version = "1.0.1", optional = true }
dot-parser = { version = "0.6.1", optional = true }
tracing = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3", features = [
  "fmt",
], optional = true }
quickcheck = "1.0"
quickcheck_macros = "1.0"

[dev-dependencies]
clap = { version = "4.5.59", features = [
  "derive",
] }

[features]
default = [
  "pathfinding",
  "bitvec",
  "dot",
  "tracing",
]
dot = [
  "dep:dot-parser",
]
pathfinding = [
  "dep:pathfinding",
]
bitvec = [
  "dep:bitvec",
]
tracing = [
  "dep:tracing",
  "dep:tracing-subscriber",
]
unchecked = [
]
slow_tests = [
]
