[package]
name = "as_enum_derive"
version.workspace = true
edition.workspace = true
description = "Internal derive macro implementation for as_enum."
license = "MIT OR Apache-2.0"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = [
  "derive",
] }
